--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn[standard]
 aiokafka
-redis[hiredis] # hiredis provides a C parser for performance
+redis[hiredis]
 pydantic
 psycopg2-binary
 httpx[http2]
