--- a/inventory_service/requirements.txt
+++ b/inventory_service/requirements.txt
@@ -1,7 +1,7 @@
 fastapi
 uvicorn[standard]
-sqlalchemy[asyncio]>=2.0  # Use SQLAlchemy 2.0+ for better async
-asyncpg # Async PostgreSQL driver
+sqlalchemy[asyncio]>=2.0
+asyncpg
 pydantic
 python-dotenv
-psycopg2-binary # Often needed as a dependency for SQLAlchemy tooling like Alembic, even with asyncpg
+psycopg2-binary
